--- a/index.html
+++ b/index.html
@@ -16,29 +16,41 @@
 </head>
 
 <body>
-    <div class="all">
+    <section class="all">
         <header class="header ">
-            <a href="https://www.behance.net/gallery/166798373/firmennyj-stil-KYND-kafe"" class="logo heartbeat"> <img src="img_2mac/honeycomb.png" alt="лого"></a>
-            <a href="https://www.behance.net/gallery/166983321/illjustracija-devushki-2""><h1 class="PF block-animation">Фомина Полина</h1></a>
-            <a href="https://www.behance.net/alinalu3" class="port block-animation">Портфолио</a>
+            <nav>
+                <ul>
+                   <li class="link"><a href="https://www.behance.net/gallery/166798373/firmennyj-stil-KYND-kafe"" class=" logo
+                        heartbeat">
+                        <img class="img1" src="img_2mac/honeycomb.png" alt="лого"></a></li> 
+
+                        <li class="link"><a href="https://www.behance.net/gallery/166983321/illjustracija-devushki-2" class=" PF
+                            block-animation">Фомина Полина
+                        </a></li> 
+
+                        <li class="link"><a href="https://www.behance.net/alinalu3" class="port block-animation">Портфолио</a></li> 
+                </ul>
+            </nav>
         </header>
-        <div class="class elem"><img  src="img_2mac/unnamed7.jpg" alt="фото" class="img1 "></div>
+        
         <div class="cont">
+            <div class="class elem kenburns-top"><img src="img_2mac/unnamed7.jpg" alt="фото" class="img "></div>
             <div class="cont-sec text-focus-in">
+
                 <h1 class="h1">Обо мне</h1>
                 <p class="text">27 лет, родилась 9 сентября 1995<br>Санкт-Петербург</p>
                 <h1 class="h1">Образование</h1>
-                <p class="text">2019. Бакалавр  ГУМРФ им. С.О.Макарова Строительство<br> и эксплуатация инженерных зданий
+                <p class="text">2019. Бакалавр ГУМРФ им. С.О.Макарова Строительство и эксплуатация инженерных зданий
                     и
-                    сооружений.Профиль ГТС.,<br> Инженер <br>
+                    сооружений.Профиль ГТС., Инженер <br>
 
-                    2015. Колледж морского и речного флота им. адмирала С.О. Макарова<br> Строительство и эксплуатация
+                    2015. Колледж морского и речного флота им. адмирала С.О. Макарова Строительство и эксплуатация
                     инженерных
                     сооружений, Техник</p>
                 <h1 class="h1"> Повышение квалификации </h1>
                 <p class="text">2023. Основы Frontend-разработки. АНО ВО "Университет Иннополис"<br>
-                    2022. Курс  Графический дизайн Ruzaone<br> 
-                    2022. Курс  Инфографика маркетплейсов<br>
+                    2022. Курс Графический дизайн Ruzaone<br>
+                    2022. Курс Инфографика маркетплейсов<br>
                     2013. AutoCAD 2014 НОУ ИПО Базис, AutoCAD 2014
                 </p>
             </div>
@@ -48,10 +60,11 @@
 
 
 
-    </div>
-    
+    </section>
+
     <footer class="footer">
-        <p class="block-animation"> 2023 &copy; <a class="block-animation " href="https://codepen.io/Appletini756">учебный центр</a></p>
+        <p class="block-animation"> 2023 &copy; <a class="block-animation "
+                href="https://codepen.io/Appletini756">учебный центр</a></p>
     </footer>
 </body>
 
